[package]
name = "rs-nats"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_nats_lib"
path = "src/lib.rs"

[[bin]]
name = "rs-nats"
path = "src/main.rs"

[dependencies]
async-nats = "0.32.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.58"
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.2"
dirs = "5.0.1"
futures-util = "0.3.31"

# For cross-platform command execution
[target.'cfg(windows)'.dependencies]
whoami = "1.4.1"

[target.'cfg(unix)'.dependencies]
whoami = "1.4.1"